--- a/greybox/sass/_void__embed.scss
+++ b/greybox/sass/_void__embed.scss
@@ -55,7 +55,7 @@
     input.search{padding: .95em !important;}
     .form-inline .btn-primary{width: 25%;padding: .95em !important;}
   }
-  button{background: transparent;border:none;color: white;}
+  button{background: transparent;border:none;border-radius:0px;}
 
   /*##########################
       TYPOGRAPHY CHANGES
