--- a/greybox/sass/_void__navbar.scss
+++ b/greybox/sass/_void__navbar.scss
@@ -2,7 +2,7 @@
 .navbar {
   position: relative;
   min-height: 42px;
-  margin-bottom: 18px;
+  //margin-bottom: 18px;
   //border: 1px solid transparent;
   &:before {
     content: " ";
