--- a/greybox/css/void.css
+++ b/greybox/css/void.css
@@ -3238,7 +3238,14 @@ p[class*='col-'] {
       margin: 0 0 0; } }
 
 .container-fluid {
-  padding: 2.97143 0; }
+  padding: 2.97143 0;
+  /*p:nth-child(2n+1){
+    padding-top: 40px;
+  }*/
+  /*.single-content p:nth-child(1n+1){
+    padding-top:0;
+    margin-top:0;
+  }*/ }
   .container-fluid .row {
     margin-left: 0px;
     margin-right: 0px; }
@@ -3277,8 +3284,28 @@ p[class*='col-'] {
     .container-fluid .row .col-xs-12.col-sm-4:nth-child(2n+2) {
       padding-left: 20px;
       padding-right: 20px; }
-  .container-fluid p:nth-child(2n+1) {
-    padding-top: 40px; }
+    .container-fluid .row .col-xs-12 > .single-content {
+      padding: 0 20px;
+      margin: 0 25% 0 25%;
+      width: 50%; }
+      .container-fluid .row .col-xs-12 > .single-content ::selection {
+        background-color: white;
+        color: #1a3acc; }
+      @media (max-width: 992px) {
+        .container-fluid .row .col-xs-12 > .single-content {
+          padding: 0 20px;
+          width: 66.666%;
+          margin: 0 16.666% 0 16.666%; } }
+      @media (max-width: 767px) {
+        .container-fluid .row .col-xs-12 > .single-content {
+          width: 100%;
+          margin: 0; } }
+      .container-fluid .row .col-xs-12 > .single-content p {
+        font-size: 18px; }
+  .container-fluid .single-content p {
+    margin-top: 30px; }
+  .container-fluid .single-content .quote {
+    margin: 60px 0; }
   .container-fluid h3 + p, .container-fluid h3 + p:nth-child(2n+1), .container-fluid .h3 p, .container-fluid .h3 + p:nth-child(2n+1), .container-fluid h4 + p, .container-fluid h4 + p:nth-child(2n+1), .container-fluid .h4 + p, .container-fluid .h4 + p:nth-child(2n+1) {
     padding-top: 0; }
 
@@ -3505,7 +3532,7 @@ p[class*='col-'] {
         margin: 18px 0;
         /*font-weight:900;*/ }
       .tile-graphic.tile-medium .tile-card .inside .year {
-        color: black;
+        color: #303030;
         font-weight: 500; }
       .tile-graphic.tile-medium .tile-card .inside .see-more, .tile-graphic.tile-medium .tile-card .inside .view-more {
         margin: 15px 0; }
@@ -3655,12 +3682,24 @@ p[class*='col-'] {
         font-weight: 500; }
       .tile-graphic.tile-medium .tile-card .inside .see-more, .tile-graphic.tile-medium .tile-card .inside .view-more {
         margin: 15px auto;
-        padding: .4125em 2.5em;
-        border: 3px solid #545454;
         font-weight: 900;
-        width: 30%; }
+        color: #1a3acc;
+        border: 3px solid #1a3acc;
+        display: inline-block;
+        font-family: sans-serif;
+        font-size: 13px;
+        font-weight: bold;
+        line-height: 40px;
+        text-align: center;
+        text-decoration: none;
+        padding: .4125em 2.5em;
+        -webkit-text-size-adjust: none;
+        mso-hide: all;
+        transition: color 400ms, background-color 400ms;
+        cursor: pointer;
+        border-radius: 0px; }
         .tile-graphic.tile-medium .tile-card .inside .see-more:hover, .tile-graphic.tile-medium .tile-card .inside .view-more:hover {
-          background: #545454;
+          background: #1a3acc;
           color: white; }
   .tile-graphic.tile-small .tile-title {
     /* bottom: 24px; */
@@ -3746,7 +3785,8 @@ p[class*='col-'] {
         color: #d2d0cd; }
 
   #projects .col-sm-4 .row .col-xs-12 .tile-card h2 h2, #projects .row .col-sm-4.col-xs-12 .tile-card h2, #projects .col-sm-4 .tile-card h2 {
-    font-size: 20px; }
+    font-size: 20px;
+    margin: 4px auto; }
   #projects .col-sm-4 .row .col-xs-12 .tile-card h2 .category, #projects .row .col-sm-4.col-xs-12 .tile-card .category, #projects .col-sm-4 .tile-card .category {
     visibility: hidden;
     display: none !important;
@@ -4025,6 +4065,9 @@ h4 small, h5 small, h6 small, h4 .small, h5 .small, h6 .small {
 
 h1, .h1 {
   font-size: 36px; }
+
+.single-content h1, .single-content .h1 {
+  font-size: 42px; }
 
 h2, .h2 {
   font-size: 30px; }
