--- a/greybox/sass/_void__module.scss
+++ b/greybox/sass/_void__module.scss
@@ -359,6 +359,25 @@ $overlap: $line-height-md * 2;
       padding-left: 20px;
       padding-right: 20px;
     }
+    .col-xs-12 > .single-content{
+      padding:0 20px;
+      margin: 0 25% 0 25%;
+      width:50%;
+
+      ::selection {background-color: white; color: $brandblue;}
+      @media (max-width: $break-medium){
+        padding:0 20px;
+        width:66.666%;
+        margin: 0 16.666% 0 16.666%;
+      }
+      @media (max-width: $break-small-max){
+        width:100%;
+        margin:0;
+      }
+      p{
+        font-size:$font-size-med;
+      }
+    }
   }
   h3, .h3, h4, .h4, p{
     //padding: 0 20px;
@@ -366,9 +385,17 @@ $overlap: $line-height-md * 2;
       //padding: 0 10px;
     }
   }
-  p:nth-child(2n+1){
+  /*p:nth-child(2n+1){
     padding-top: 40px;
+  }*/
+  .single-content {
+    p{margin-top:30px;}
+    .quote{margin:60px 0;}
   }
+  /*.single-content p:nth-child(1n+1){
+    padding-top:0;
+    margin-top:0;
+  }*/
   h3 + p, h3 + p:nth-child(2n+1), .h3 p, .h3 + p:nth-child(2n+1), h4 + p, h4 + p:nth-child(2n+1), .h4 + p, .h4 + p:nth-child(2n+1){
     padding-top: 0;
   }
