--- a/greybox/sass/_void__tile.scss
+++ b/greybox/sass/_void__tile.scss
@@ -273,7 +273,7 @@
 						/*font-weight:900;*/
 					}
 					.year{
-						color:$linkhovercolor;
+						color:#303030;
 						font-weight:500;
 					}
 					.category{
@@ -485,13 +485,30 @@
 					}
 					.see-more, .view-more{
 						margin: 15px auto;
-						padding: .4125em 2.5em;
-						border: 3px solid #545454;
+						//padding: .4125em 2.5em;
+						//border: 3px solid $brandblue;
 						font-weight:900;
-						width:30%;
+						//width:30%;
+						color: $brandblue;
+
+						border: 3px solid $brandblue;
+					  display:inline-block;
+					  font-family:sans-serif;
+					  font-size:13px;
+					  font-weight:bold;
+					  line-height:40px;
+					  text-align:center;
+					  text-decoration:none;
+					  //width:150px;
+					  padding: .4125em 2.5em;
+					  -webkit-text-size-adjust:none;
+					  mso-hide: all;
+					  transition: color 400ms, background-color 400ms;
+					  cursor: pointer;
+					  border-radius: 0px;
 
 						&:hover{
-							background:#545454;
+							background:$brandblue;
 							color:white;
 						}
 					}
@@ -581,6 +598,7 @@
 	#projects .col-sm-4 .row .col-xs-12 .tile-card h2, #projects .row .col-sm-4.col-xs-12 .tile-card, #projects .col-sm-4 .tile-card{
 		h2{
 			font-size:20px;
+			margin: 4px auto;
 		}
 		.category{
 			visibility: hidden;
