--- a/greybox/sass/_void__embed.scss
+++ b/greybox/sass/_void__embed.scss
@@ -69,7 +69,7 @@
   #featured h1 a, #feaured h2 a, #featured h3 a, #featured h4 a, #featured h5 a{color: $brandblue;border: none;}
   #featured p{letter-spacing: .005em;font-size: .95em;margin-bottom: 12px;line-height: 1.75em;}
   .intro, .callout{font-weight: 600 !important;letter-spacing: 0;line-height: 1.25em;}
-  h4, .h4{font-size: 1.15em !important;}
+  h4.h4{font-size: 1.15em !important;}
   blockquote::before {content:"“" !important;}
   blockquote::after {content:"”" !important;}
   figcaption{color: inherit;}
