--- a/greybox/sass/_void__module.scss
+++ b/greybox/sass/_void__module.scss
@@ -389,8 +389,67 @@ $overlap: $line-height-md * 2;
     padding-top: 40px;
   }*/
   .single-content {
-    p{margin-top:30px;}
+    p{
+      margin-top:30px;
+      font-size:$font-size-med;
+    }
     .quote{margin:60px 0;}
+
+    .inset-left-module{
+      box-shadow: 30px 30px 0px $brandblue;
+      display:block;
+      width:50%;
+      position:relative;
+      float:left;
+      margin:0px 45px 55px -20px;
+      top:32px;
+
+      @media (max-width: $break-small-max){
+        width:50%;
+        margin:0px 45px 55px 0px;
+      }
+
+      .inset-related-list{
+        list-style:none;
+        margin:0;padding:0;
+
+        .inset-related-item{
+          display:block;
+          margin:0 0 15px 0;
+          border:none;
+          //&:last-child{margin:0;}
+
+          .inset-related-link{
+            display:block;
+            width:100%;
+            cursor:pointer;
+            border:none;
+
+            .inset-related-link-image{
+              display:inline-block;
+              position:relative;
+              width:25%;
+            }
+            .inset-related-link-desc{
+              display:inline-block;
+              position:relative;
+              width:75%;
+              float:right;
+              padding:0 0 0 15px;
+
+              .inset-related-byline{
+                font-size:.8em;
+              }
+              .inset-related-title{
+                color:$textcolor;
+                font-size:.9em;
+                line-height:1em
+              }
+            }
+          }
+        }
+      }
+    }
   }
   /*.single-content p:nth-child(1n+1){
     padding-top:0;
@@ -398,5 +457,19 @@ $overlap: $line-height-md * 2;
   }*/
   h3 + p, h3 + p:nth-child(2n+1), .h3 p, .h3 + p:nth-child(2n+1), h4 + p, h4 + p:nth-child(2n+1), .h4 + p, .h4 + p:nth-child(2n+1){
     padding-top: 0;
+  }
+  &.palette-brandblue.palette-inverse{
+    .single-content{
+      .inset-left-module{
+        box-shadow: 30px 30px 0px white;
+      }
+    }
+  }
+  &.palette-brandblue.warm{
+    .single-content{
+      .inset-left-module{
+        box-shadow: 30px 30px 0px $brandblue;
+      }
+    }
   }
 }
