--- a/greybox/sass/_quotes.scss
+++ b/greybox/sass/_quotes.scss
@@ -67,14 +67,21 @@ ul#cyclelist li, #shuffle .quote{
     top:-0.4em;
   }
 }
-#quotes .quote-outer{
-  position: relative;
-  min-height: $quotes-size;
-  @media (max-width: 992px){
-    min-height: $quotes-size - 120px;
+#quotes {
+  .quote-outer{
+    position: relative;
+    min-height: $quotes-size;
+    @media (max-width: 992px){
+      min-height: $quotes-size - 120px;
+    }
+    @media (max-width: 767px){
+      min-height: $quotes-size - 220px;
+    }
   }
-  @media (max-width: 767px){
-    min-height: $quotes-size - 220px;
+  .container-fluid{
+    .quote-outer.row{
+      margin: 0 16px;
+    }
   }
 }
 @media (min-width: 768px){
