--- a/greybox/sass/_reset.scss
+++ b/greybox/sass/_reset.scss
@@ -26,7 +26,7 @@ body {
 a {
   background: transparent;
   &:focus {
-    outline: thin dotted;
+    //outline: thin dotted;
   }
   &:active, &:hover {
     outline: 0;
