--- a/greybox/sass/_void__alpha.scss
+++ b/greybox/sass/_void__alpha.scss
@@ -47,7 +47,7 @@ a {
   &:focus {
     color: $linkhovercolor;
     text-decoration: underline;
-    outline: thin dotted;
+    // outline: thin dotted;
     outline: 5px auto -webkit-focus-ring-color;
     outline-offset: -2px;
   }
