--- a/greybox/sass/_void__navbar.scss
+++ b/greybox/sass/_void__navbar.scss
@@ -703,7 +703,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .wrapper{padding:79px 11px 6px;}
+  .wrapper{padding:79px 11px 0px;}
   .navbar {
     margin-bottom: 0;
   }
@@ -875,12 +875,16 @@
       .trinav{
         height:25px;
         width:25px;
-        background-image: url(../img/ui-dist-sprite.svg);
-        background-position: -706px 0;
+        background-image: url(../img/sprite.svg);
+        background-position: 50px 0;//-706px 0
         position: absolute;
         display: block;
         right: 5px;
         bottom: 10px;
+
+        &:hover{
+          background-position: -706px 0;
+        }
       }
       #trimenu:hover path {fill: $brandblue;}
 
