--- a/greybox/sass/coma.scss
+++ b/greybox/sass/coma.scss
@@ -19,7 +19,7 @@
 @import 'coma__palette';
 @import 'coma__form';
 @import 'coma__blog';
-@import 'social';
+//@import 'social';
 @import 'mixins';
 @import 'flat-fonts';
 @import 'coma__embed';
