--- a/greybox/sass/_coma__footer.scss
+++ b/greybox/sass/_coma__footer.scss
@@ -1,20 +1,20 @@
 //_footer.scss
 .footer-para{
-  background-color:$cool-grey;//#2a2a2a
+  background-color:#d8d8d8;//#2a2a2a #e7e7e7 d8d8d8
   height:$footer-height;
   position:fixed;
   bottom:0;
   left:0;
   width:100%;
   z-index:-1;
-  color:$brandblue;
+  color:#848484;
   padding:50px 0;
   a{
-  color:$brandblue;
-  border-bottom:1px dotted $brandblue;
+  color:lighten($textcolor, 25%);
+  border-bottom:1px dotted white;
     &:hover, &:focus {
-      color: $brandblue;
-      border-bottom: 1px solid $brandblue;
+      color: lighten($textcolor, 25%);
+      border-bottom: 1px solid lighten($textcolor, 25%);
     }
   }
   #back-top{
@@ -22,22 +22,24 @@
     right:8px;
     top:-30px;
     a{
-      color:$brandblue;
-      background-color: $brandblue-cool;
+      color:white;
+      background-color: white-cool;
       font-size:2em;
       //opacity:.5;
       &:hover{
       //  opacity:1;
-      color: white;
-      background-color: $brandblue;
+      color: #2a2a2a;
+      background-color: white;
+      cursor: pointer;
       }
       i{
-        border: 3px solid $brandblue;
+        border: 3px solid white;
         width:40px;
         padding:4px;
         &:hover{
-          background-color: $brandblue;
-          color:white;
+          background-color: white;
+          color:#d8d8d8;
+          cursor: pointer;
         }
       }
     }
@@ -55,9 +57,9 @@
   padding-right:7px;
   position:relative;
   a{
-    color:$brandblue;
+    color:#848484;
     &:hover{
-      border-bottom:1px solid $brandblue;
+      border-bottom:1px solid #848484;
     }
     &.footer-brand{border-bottom:none;}
   }
@@ -69,8 +71,8 @@
     }
   }
   .list-unstyled, ul li{
-    a{color:$brandblue;
-      &:hover{border-bottom:1px dotted $brandblue;}
+    a{color:#848484;
+      &:hover{border-bottom:1px dotted #848484;}
     }
   }
   [class^="icon-"], [class*="icon-"], [class^="fa-"], [class*="fa-"] {
@@ -80,6 +82,10 @@
     text-align: center;
     top: .25em;
     width: 24px;
+
+    &:hover{
+      color: #d8d8d8;
+    }
   }
 }
 
@@ -102,7 +108,7 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 1;
-    opacity: .5;
+    opacity: .85;
     filter: alpha(opacity = 50);
     padding: 0 8px;
     &:hover, &:focus {
@@ -183,11 +189,11 @@
         width:60px;
         a{
           opacity:.5;
-          &:hover{opacity:1;color:$brandblue;}
+          &:hover{opacity:1;color:white;}
           i, .material-icons{
             width:42px;
             height:43px;
-            border:2px solid $brandblue;
+            border:2px solid white;
             border-radius:40px;
             font-size:1.75em !important;
             padding:10px;
