--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -16,6 +16,7 @@ $freight: 'freightbig_probold', Georgia, serif;
 $archivo: 'Archivo Black', sans-serif;
 $source: 'Source Sans Pro', sans-serif;
 $varela: 'Varela Round' sans-serif;
+$roboto: 'Roboto' sans-serif;
 
 $font-size-base:     14px !default;
 $font-size-small:    ceil(($font-size-base * 0.85)) !default; // ~12px
