--- a/greybox/sass/_coma__blog.scss
+++ b/greybox/sass/_coma__blog.scss
@@ -182,6 +182,7 @@ h1.blog-heading{
   font-weight: 500;
   padding: 0 0 20px 0;
   font-weight: $font-weight-3;
+  color:#949494;
 
   &:hover{
     background:white;
