begining to add test data
+ words.json test content file
+ Words.js comp
+ Nav.jsx
+ _type.scss @import of google fonts

--- a/react-redesign/src/App.scss
+++ b/react-redesign/src/App.scss
@@ -1,8 +1,21 @@
-/*
-https://facebook.github.io/create-react-app/docs/adding-a-sass-stylesheet
+/////////////////////////////////////
+//   dependencies
+/////////////////////////////////////
+@import "node_modules/bootstrap/scss/bootstrap.scss";
 
-*/
+/////////////////////////////////////
+//   fonts
+/////////////////////////////////////
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700");
 
+/////////////////////////////////////
+//   imports
+/////////////////////////////////////
+//@import 'style/base/variables';
+
+/////////////////////////////////////
+//   defaults
+/////////////////////////////////////
 .App {
   text-align: center;
 }
