--- a/react-redesign/src/App.scss
+++ b/react-redesign/src/App.scss
@@ -11,6 +11,7 @@
 /////////////////////////////////////
 //   imports
 /////////////////////////////////////
+//@import "./style/void.scss";
 //@import 'style/base/variables';
 
 /////////////////////////////////////
