--- a/atom/styles.less
+++ b/atom/styles.less
@@ -23,7 +23,10 @@
 @brand-primary: #1a3acc;
 @brand-magenta: #ab1acc;
 @brand-purple: purple;
-@brand-legacy: #1ACCAB;
+@brand-java: #1ACCAB;
+@brand-legacy: #008080;
+@brand-gable: #142a2d;
+@brand-gold: #CCAB1A;
 
 
 //Fira Code Optimizatations
@@ -43,13 +46,10 @@ atom-text-editor.editor .syntax--string.syntax--regexp {
 }
 
 // style the background and foreground colors on the atom-text-editor-element itself
-atom-text-editor, .status-bar, .panes, .pane, .directory{
-  background-color: hsl(20, 10%, 5%) !important;
-}
 atom-text-editor {
 // color: white;
 // background-color: hsl(180, 24%, 12%);
-background-color: hsl(20, 10%, 5%);
+background-color: hsl(20, 10%, 10%);
 }
 
 // style UI elements inside atom-text-editor
@@ -70,10 +70,8 @@ atom-text-editor::shadow .lines .line.cursor-line {
 background-color: rgba(30, 80, 100, 0.125);
 }
 ::-webkit-scrollbar {
-  width: 18px !important;
-  height: 18px !important;
-  background: hsl(20, 10%, 5%);
-  opacity: .25;
+width: 18px !important;
+height: 18px !important;
 }
 .scrollbars-visible-always /deep/ ::-webkit-scrollbar {
 width: 40px;
@@ -81,8 +79,6 @@ width: 40px;
 &-track {
 border-radius: 3px;
 //box-shadow: inset 0 0 1px rgba(0, 0, 0, 1);
-background: hsl(20, 10%, 5%);
-opacity: .25 !important;
 }
 
 &-thumb {
@@ -95,8 +91,7 @@ background-color: rgba(0, 0, 0, 0.5);
 }
 }
 }
-atom-text-editor.editor .line.folded, .fold-marker {
-  display: block !important;
+atom-text-editor.editor .line.folded {
 border-bottom: 1px solid blue;
 //border-color: red;
 animation-name: flash_border;
@@ -139,9 +134,7 @@ display: none;
 // background: #999;
 // width: 12px;
 }
-.gutter, .tool-panel{
-  background-color: rgba(20, 22, 45, 0.125) !important;
-}
+
 .scrollbars-visible-always {
 ::-webkit-scrollbar {
 width: 5px;
@@ -181,25 +174,6 @@ background-color: darken(@brand-primary, 20%) !important;
 border-color: darken(@brand-primary, 20%) !important;
 box-shadow: 0 0 0 1px  darken(@brand-primary, 20%) !important;
 }
-.btn.selected:focus, .btn.btn-default.selected:focus, .btn.selected:hover, .btn.btn-default.selected:hover{
-  background: @brand-primary;
-}
-.btn.selected, .btn.btn-default.selected{
-  background: darken(@brand-primary, 0%);
-
-  &:hover{
-    background: darken(@brand-magenta, 20%);
-  }
-}
-
-.btn-group-options{
-  .btn{
-    &:hover{
-      background: darken(@brand-magenta, 20%);
-    }
-  }
-}
-
 .tab-bar .tab.active[data-type$="Editor"]{
 color: lighten(@brand-magenta, 10%) !important;
 }
@@ -281,7 +255,7 @@ color: grey;
 }
 }
 // .tab-bar .tab:hover .close-icon{
-//   color: @brand-legacy;
+//   color: @brand-java;
 // }
 .pane.focus-within.tab.active:before {
 background: darken(@brand-primary, 0%) !important;
@@ -290,7 +264,7 @@ atom-pane-axis > atom-pane.active .tab.active:before, atom-pane-container > atom
 background: darken(@brand-primary, 0%) !important;
 }
 .find-and-replace.has-results .find-container .result-counter{
-color: @brand-legacy;
+color: @brand-java;
 }
 // Hide title
 .title-bar .title {
@@ -404,4 +378,62 @@ background: @brand-magenta;
 color: black !important;
 opacity: 0.25;
 }
+}
+
+.github-StagingView-group.is-focused .is-selected{
+background: darken(@brand-magenta, 20%);
+&:hover{
+background: darken(@brand-magenta, 10%);
+}
+}
+
+atom-text-editor .github-ConflictTheirsBlock .btn{
+background:  @brand-primary;
+//color: @brand-magenta;
+}
+atom-text-editor .github-ConflictOursBlock .btn{
+background: @brand-legacy;
+//color: @brand-gable;
+}
+
+.github-CommitView-coAuthorEditor .Select-value{
+border: 1px solid @brand-primary;
+background: @brand-gable;
+}
+.Select--multi .Select-value-icon{
+border-right: @brand-primary;
+&:hover{
+color: red;
+}
+}
+.tree-view:focus .selected .project-root-header.project-root-header{
+background: @brand-legacy !important;
+background: darken(@brand-primary, 15%) !important;
+
+animation: colorChange 10s infinite !important;
+-webkit-animation: colorChange 10s infinite !important; /* Chrome and Safari */
+}
+.tree-view .project-root.project-root.selected .project-root-header{
+animation: colorChange 10s infinite !important;
+-webkit-animation: colorChange 10s infinite !important; /* Chrome and Safari */
+}
+
+@keyframes colorChange{
+0%          {background: darken(@brand-primary, 15%);}
+16.666667%  {background: darken(@brand-primary, 35%);}
+33.333333%  {background: darken(@brand-magenta, 35%);}
+50%         {background: darken(@brand-magenta, 25%);}
+//66%         {background: darken(@brand-magenta, 15%);}
+//83%         {background: darken(@brand-magenta, 25%);}
+100%        {background: darken(@brand-primary, 15%);}
+}
+
+@-webkit-keyframes colorChange {
+0%          {background: darken(@brand-primary, 15%);}
+16.666667%  {background: darken(@brand-primary, 35%);}
+33.333333%  {background: darken(@brand-magenta, 35%);}
+50%         {background: darken(@brand-magenta, 25%);}
+//66%         {background: darken(@brand-magenta, 15%);}
+//83%         {background: darken(@brand-magenta, 25%);}
+100%        {background: darken(@brand-primary, 15%);}
 }
