fix user commit
Co-Authored-By: Joel <dombekj890@gmail.com>

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -417,7 +417,7 @@ animation: colorChange 10s infinite !important;
 animation: colorChange 10s infinite !important;
 -webkit-animation: colorChange 10s infinite !important; /* Chrome and Safari */
 }
-
+// smoothing out the tranistion between the colors
 @keyframes colorChange{
 0%          {background: darken(@brand-primary, 15%);}
 16.666667%  {background: darken(@brand-primary, 35%);}
