another user test

--- a/atom/styles.less
+++ b/atom/styles.less
@@ -20,7 +20,7 @@
 .:%::.
 */
 
-// color var
+// color var another user test
 @brand-primary: #1a3acc;
 @brand-magenta: #ab1acc;
 @brand-purple: purple;
