--- a/css/tao.css
+++ b/css/tao.css
@@ -8,6 +8,9 @@
     /* padding-top: 0px; */
   }
 }
+.toggle .quote-toggle {
+  background-color: white;
+}
 .tile-splash {
   background: white;
 }
