--- a/beyond/css/styles.css
+++ b/beyond/css/styles.css
@@ -33,8 +33,16 @@ li {
   cursor: pointer;
 }
 
-#pauseButton:hover {
-  background-color: #fff;
-  color: #007bff;
-  border: 2px solid #007bff;
+#pauseButton.play {
+  /* Styles for the play state */
+  background-color: #007bff; /* Blue background */
+  border-color: #007bff; /* Blue border */
+  color: #fff; /* White text */
+}
+
+#pauseButton.paused {
+  /* Styles for the paused state */
+  background-color: #dc3545; /* Red background */
+  border-color: #dc3545; /* Red border */
+  color: #fff; /* White text */
 }
